[gd_scene load_steps=9 format=3 uid="uid://kldgsjw27g38"]

[ext_resource type="Texture2D" uid="uid://dtn178wbi5xe" path="res://Assets/icon.svg" id="1_edpdi"]
[ext_resource type="Script" uid="uid://r8ki3tdnj4bq" path="res://Escenas/Control/HUB/hud.gd" id="1_niw88"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tppc2"]
bg_color = Color(0.658824, 0.592157, 0.458824, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_edpdi"]
bg_color = Color(3.70607e-06, 0.727302, 0.120233, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="LabelSettings" id="LabelSettings_niw88"]
line_spacing = 6.0
font_size = 20
font_color = Color(8.66354e-07, 0.642404, 0.348086, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_niw88"]
bg_color = Color(0.657949, 0.592621, 0.458439, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_x7p08"]
bg_color = Color(0.396071, 0.602658, 0.914211, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="LabelSettings" id="LabelSettings_x7p08"]
line_spacing = 6.0
font_size = 20
font_color = Color(0.437725, 0.581479, 0.929726, 1)

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_niw88")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="BarrasContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="VidaContainer" type="HBoxContainer" parent="MarginContainer/BarrasContainer"]
layout_mode = 2

[node name="ProgressBar" type="ProgressBar" parent="MarginContainer/BarrasContainer/VidaContainer"]
custom_minimum_size = Vector2(290, 32)
layout_mode = 2
size_flags_horizontal = 0
theme_override_styles/background = SubResource("StyleBoxFlat_tppc2")
theme_override_styles/fill = SubResource("StyleBoxFlat_edpdi")
value = 45.0
show_percentage = false

[node name="Label" type="Label" parent="MarginContainer/BarrasContainer/VidaContainer"]
layout_mode = 2
text = "32"
label_settings = SubResource("LabelSettings_niw88")

[node name="MagiaContainer" type="HBoxContainer" parent="MarginContainer/BarrasContainer"]
layout_mode = 2

[node name="ProgressBar2" type="ProgressBar" parent="MarginContainer/BarrasContainer/MagiaContainer"]
custom_minimum_size = Vector2(290, 32)
layout_mode = 2
size_flags_horizontal = 0
theme_override_styles/background = SubResource("StyleBoxFlat_niw88")
theme_override_styles/fill = SubResource("StyleBoxFlat_x7p08")
value = 60.0
show_percentage = false

[node name="Label2" type="Label" parent="MarginContainer/BarrasContainer/MagiaContainer"]
layout_mode = 2
text = "32"
label_settings = SubResource("LabelSettings_x7p08")

[node name="MonedasContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8

[node name="TextureRect" type="TextureRect" parent="MarginContainer/MonedasContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
texture = ExtResource("1_edpdi")
expand_mode = 5

[node name="Label" type="Label" parent="MarginContainer/MonedasContainer"]
layout_mode = 2
text = "60$"
